unpackaged/main/default/objects/BLND_DFDT_Issue__c/BLND_DFDT_Issue__c.object-meta.xml
<CustomObject>
	<label>DreamTeam Issue</label>
	<nameField>
		<label>Issue Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Issues</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>