unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Description__c.field-meta.xml
<CustomField>
	<fullName>BLND_Description__c</fullName>
	<label>Description</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>