unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Issue_Owner__c.field-meta.xml
<CustomField>
	<fullName>BLND_Issue_Owner__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Issue Owner</label>
	<referenceTo>User</referenceTo>
	<relationshipName>R00N30000002PYg6EAG</relationshipName>
	<type>Lookup</type>
</CustomField>