unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Priority__c.field-meta.xml
<CustomField>
	<fullName>BLND_Priority__c</fullName>
	<label>Priority</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Medium</fullName>
				<default>true</default>
				<label>Medium</label>
			</value>
			<value>
				<fullName>High</fullName>
			</value>
			<value>
				<fullName>Low</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>