unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Project_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Project_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Project Link</label>
	<referenceTo>BLND_DFDT_Project__c</referenceTo>
	<relationshipLabel>DreamTeam Issues</relationshipLabel>
	<relationshipName>R00N30000002PYgUEAW</relationshipName>
	<type>Lookup</type>
</CustomField>