unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Resolve_By__c.field-meta.xml
<CustomField>
	<fullName>BLND_Resolve_By__c</fullName>
	<label>Resolve By</label>
	<type>Date</type>
</CustomField>