unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Status__c.field-meta.xml
<CustomField>
	<fullName>BLND_Status__c</fullName>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Not Started</fullName>
				<default>true</default>
				<label>Not Started</label>
			</value>
			<value>
				<fullName>In Progress</fullName>
			</value>
			<value>
				<fullName>Resolved</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>