unpackaged/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
	<fullName>BLND_Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Issue</fullName>
			</value>
			<value>
				<fullName>Risk</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>